[gd_scene load_steps=2 format=3 uid="uid://cw5mi4uy8kirc"]

[ext_resource type="Script" path="res://assets/Cenas/Menu/MultiplayerController.gd" id="2_wdrwi"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_wdrwi")

[node name="StartGame" type="Button" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 149.0
offset_right = 101.0
offset_bottom = 180.0
text = "StartGame"

[node name="QuitiGame" type="Button" parent="."]
layout_mode = 0
offset_left = 111.0
offset_top = 149.0
offset_right = 198.0
offset_bottom = 180.0
text = "QuitGame
"

[node name="Host" type="Button" parent="."]
layout_mode = 0
offset_left = 87.0
offset_top = 21.0
offset_right = 138.0
offset_bottom = 52.0
text = "HOST"

[node name="JOIN" type="Button" parent="."]
layout_mode = 0
offset_left = 18.0
offset_top = 20.0
offset_right = 75.0
offset_bottom = 51.0
text = "	JOIN"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 21.0
offset_top = 60.0
offset_right = 150.0
offset_bottom = 91.0

[node name="inputchat" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 208.0
offset_top = 92.0
offset_right = 321.0
offset_bottom = 123.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 53.0
offset_top = 89.0
offset_right = 100.0
offset_bottom = 115.0
text = "Name"

[node name="TextEdit" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 211.0
offset_top = 4.0
offset_right = 318.0
offset_bottom = 92.0
editable = false

[connection signal="pressed" from="StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="QuitiGame" to="." method="_on_quiti_game_pressed"]
[connection signal="pressed" from="Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="JOIN" to="." method="_on_join_pressed"]
[connection signal="text_submitted" from="inputchat" to="." method="_on_inputchat_text_submitted"]
